--- a/Terms_6.8.html
+++ b/Terms_6.8.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Terms_6.8 – Rabbi Sacks</title>
+  <title>Terms_6.8 – Rabbi Sacks (2 בכל שורה)</title>
 
-  <!-- MOODLE SAFE (no <script>) -->
-  <!-- הדביקי את כל הבלוק לדף "תוכן מעוצב". אין CSS/JS חיצוני; הכל בתוך הבלוק. -->
-
+  <!-- MOODLE SAFE (no <script> from outside) -->
   <style>
     /* הכל ממוסגר בתוך .vbt-terms כדי למנוע זליגה לשאר הדף */
     .vbt-terms * { box-sizing: border-box; }
@@ -21,6 +19,7 @@
       padding: 14px 18px; border-radius: 40px; background: #F8E8FF; font-weight: 800; font-size: 18px;
       box-shadow: inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
       list-style: none; outline: none; transition: box-shadow .35s ease, transform .2s ease;
+      min-height: 56px;
     }
     .vbt-terms .vbt-summary:hover { transform: translateY(-1px); }
     .vbt-terms .vbt-summary:focus-visible { outline: 2px solid #fe0100; outline-offset: 2px; }
@@ -34,6 +33,7 @@
     .vbt-terms .vbt-icon {
       width: 28px; height: 28px; border-radius: 50%; background: #fe0100; color: #fff; display: grid;
       place-items: center; font-weight: 900; transition: transform .35s ease;
+      flex: 0 0 auto;
     }
     .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-icon { transform: rotate(180deg); }
 
@@ -47,14 +47,12 @@
       padding: 16px; opacity: 1; transform: translateY(0); max-height: 1200px; /* מספיק לרוב התכנים */
     }
 
-    /* גריד רספונסיבי */
+    /* גריד: תמיד 2 בכל שורה על מסכים רחבים; 1 בשבר קטן */
     .vbt-terms .vbt-grid {
-      display: grid; grid-template-columns: 1fr; gap: 18px; max-width: 1000px; margin: 0 auto;
+      display: grid; grid-template-columns: repeat(2, minmax(0,1fr)); gap: 18px; max-width: 1000px; margin: 0 auto;
     }
-
-    /* מסך רחב: תמיד שתי עמודות בדיוק */
-    @media (min-width: 700px) {
-      .vbt-terms .vbt-grid { grid-template-columns: repeat(2, minmax(0,1fr)); }
+    @media (max-width: 699.98px) {
+      .vbt-terms .vbt-grid { grid-template-columns: 1fr; }
     }
 
     /* העדפת נגישות – פחות תנועה */
@@ -67,7 +65,7 @@
 
 <div class="vbt-terms" dir="rtl" style="max-width:1120px;margin:0 auto;font-family: Alef,-apple-system,'Segoe UI',Arial,sans-serif;color:#0f172a;">
 
-  <!-- גריד רספונסיבי -->
+  <!-- גריד רספונסיבי: 2 בכל שורה -->
   <div class="vbt-grid">
 
     <!-- ===== ספריה לאומית ===== -->
@@ -78,7 +76,7 @@
         <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">ספריה לאומית</span>
       </label>
       <div class="vbt-panel">
-        ספריה לאומית:  אוצר הספרים המשמר את הידע והמורשת התרבותית של עם ישראל. הכולל כתבי קודש, ספרות עברית וכללית, כתבי יד וארכיונים היסטוריים. חלק מהארכיון של הרב זקס נמצא בספריה הלאומית.
+        ספריה לאומית: אוצר הספרים המשמר את הידע והמורשת התרבותית של עם ישראל, הכולל כתבי קודש, ספרות עברית וכללית, כתבי יד וארכיונים היסטוריים. חלק מהארכיון של הרב זקס נמצא בספריה הלאומית.
       </div>
     </div>
 
@@ -90,7 +88,7 @@
         <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">ניהול סכסוכים</span>
       </label>
       <div class="vbt-panel">
-        ניהול סכסוכים:  תחום החוקר ומיישם אסטרטגיות ליישוב מחלוקות בין יחידים, קבוצות או עמים.
+        ניהול סכסוכים: תחום החוקר ומיישם אסטרטגיות ליישוב מחלוקות בין יחידים, קבוצות או עמים.
       </div>
     </div>
 
@@ -102,7 +100,7 @@
         <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">מחלוקות הלל ושמאי</span>
       </label>
       <div class="vbt-panel">
-        מחלוקות הלל ושמאי:  הלל ושמאי היו זוג חכמים מהם התפתחו שתי אסכולות בהגותם של חז"ל, שהתאפיינו בגישות שונות לפרשנות ההלכה. הרב זקס ראה במחלוקות אלו דוגמה לאופן שבו תרבות דיון מכבדת יכולה לחזק חברה, בתנאי שהמחלוקת היא "לשם שמים".
+        מחלוקות הלל ושמאי: הלל ושמאי היו זוג חכמים מהם התפתחו שתי אסכולות בהגותם של חז"ל, שהתאפיינו בגישות שונות לפרשנות ההלכה. הרב זקס ראה במחלוקות אלו דוגמה לאופן שבו תרבות דיון מכבדת יכולה לחזק חברה, בתנאי שהמחלוקת היא "לשם שמים".
       </div>
     </div>
 
@@ -114,7 +112,7 @@
         <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">אהרון הכהן משכין שלום</span>
       </label>
       <div class="vbt-panel">
-        אהרון הכהן משכין שלום:  אחיו של משה והכהן הגדול הראשון, שנודע כמגשר, ומתווך בין אנשים ומפשר סכסוכים. נתפס כמופת לאדם הפועל לאחדות ולריפוי מתחים חברתיים
+        אהרון הכהן משכין שלום: אחיו של משה והכהן הגדול הראשון, שנודע כמגשר וכמפשר סכסוכים. נתפס כמופת לאדם הפועל לאחדות ולריפוי מתחים חברתיים.
       </div>
     </div>
 
@@ -128,7 +126,7 @@
     var b = document.body, d = document.documentElement;
     return Math.max(d.scrollHeight, b.scrollHeight, d.offsetHeight, b.offsetHeight, d.clientHeight, b.clientHeight);
   }
-  function sendHeight(){ parent.postMessage({ type: 'termsHeight', height: Math.ceil(computeHeight()) }, '*'); }
+  function sendHeight(){ try { parent.postMessage({ type: 'termsHeight', height: Math.ceil(computeHeight()) }, '*'); } catch(e){} }
   function burst(ms){ var end=Date.now()+(ms||800); (function step(){ sendHeight(); if(Date.now()<end) requestAnimationFrame(step); })(); }
 
   if ('ResizeObserver' in window) {
