--- a/Terms_6.8.html
+++ b/Terms_6.8.html
@@ -18,7 +18,7 @@
       display: flex; align-items: center; gap: 12px; direction: rtl; cursor: pointer;
       padding: 14px 18px; border-radius: 40px; background: #F8E8FF; font-weight: 800; font-size: 18px;
       box-shadow: inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
-      list-style: none; outline: none; transition: box-shadow .35s ease, transform .2s ease;
+      list-style: none; outline: none; transition: box-shadow .35s ease, transform .2s ease, background-color .3s ease;
       min-height: 56px;
     }
     .vbt-terms .vbt-summary:hover { transform: translateY(-1px); }
@@ -26,6 +26,7 @@
 
     /* מצב פתוח – צל מעט חזק יותר */
     .vbt-terms .vbt-toggle:checked + .vbt-summary {
+      background: #D7F6E4;
       box-shadow: 0 6px 16px rgba(0,0,0,.06), inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
     }
 
@@ -35,7 +36,10 @@
       place-items: center; font-weight: 900; transition: transform .35s ease;
       flex: 0 0 auto;
     }
-    .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-icon { transform: rotate(180deg); }
+    .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-icon {
+      background: #69DA98;
+      transform: rotate(180deg);
+    }
 
     /* פנל תוכן – פייד אין/אאוט מלא + גלישה חלקה בגובה */
     .vbt-terms .vbt-panel {
