--- a/iframe-wrapper.html
+++ b/iframe-wrapper.html
@@ -2,22 +2,36 @@
 <html dir="rtl">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { margin: 0; padding: 0; overflow: hidden; }
-    iframe { border: 0; display: block; width: 100%; }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { overflow: hidden; }
+    iframe { 
+      border: 0; 
+      display: block; 
+      width: 100%; 
+      min-height: 200px;
+    }
   </style>
 </head>
 <body>
   <iframe id="content"></iframe>
   <script>
     var iframe = document.getElementById('content');
-    var url = new URLSearchParams(window.location.search).get('url');
-    if (url) iframe.src = decodeURIComponent(url);
     
+    // קבל את ה-URL מהפרמטר
+    var params = new URLSearchParams(window.location.search);
+    var url = params.get('url') || 'Terms_6.8.html';
+    iframe.src = url;
+    
+    // האזן להודעות מה-iframe הפנימי
     window.addEventListener('message', function(e) {
-      if (e.data && e.data.type === 'termsHeight' && e.data.height) {
-        iframe.style.height = (e.data.height + 10) + 'px';
-        parent.postMessage({ type: 'termsHeight', height: e.data.height + 10 }, '*');
+      if (e.data && e.data.type === 'termsHeight') {
+        var newHeight = e.data.height;
+        // עדכן את גובה ה-iframe הפנימי
+        iframe.style.height = newHeight + 'px';
+        // שלח את הגובה החדש להורה (Moodle)
+        parent.postMessage({ type: 'termsHeight', height: newHeight }, '*');
       }
     });
   </script>
